swagger modified for mandatory key and remove extra console
