# router/userServiceOrderRouter.js
@@ -3,6 +3,6 @@ const route = require("express-promise-router")
 const router = new route();
 
 router.post("/createOrder", Order.createOrder)
-router.delete("/cancelAlterationOrRepairOrder", Order.cancelAlterationOrRepairOrder)
+router.delete("/cancelAlterationOrder", Order.cancelAlterationOrder)
 
 module.exports = router
